# rusheet

./: .gitignore  CLAUDE.md  CONDITIONAL_FORMATTING.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  ISSUES.md  LICENSE  README.md  TODOS.md  benchmark-zero-copy.html  docker-compose.yml  index.html  justfile  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.browser.ts  vite.config.lib.ts  vite.config.ts
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docs.yml  test.yml
crates/rusheet-core/: Cargo.toml
crates/rusheet-core/examples/: conditional_format_example.rs  search_demo.rs
crates/rusheet-core/src/: cell.rs  chunk.rs  conditional_format.rs  error.rs  format.rs  gap_buffer.rs  lib.rs  range.rs  search.rs  sheet.rs  spatial.rs  validation.rs  workbook.rs
crates/rusheet-core/src/state/: clipboard.rs  edit.rs  input.rs  mod.rs  selection.rs  viewport.rs
crates/rusheet-formula/: Cargo.toml
crates/rusheet-formula/src/: ast.rs  dependency.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  parser_nom.rs  reference_shifter.rs
crates/rusheet-formula/src/functions/: datetime.rs  logical.rs  lookup.rs  math.rs  mod.rs  text.rs
crates/rusheet-history/: Cargo.toml
crates/rusheet-history/src/: command.rs  lib.rs  stack.rs
crates/rusheet-server/: .env.example  Cargo.toml
crates/rusheet-server/src/: config.rs  error.rs  lib.rs  main.rs
crates/rusheet-server/src/api/: health.rs  mod.rs  workbooks.rs
crates/rusheet-server/src/collab/: document.rs  mod.rs  websocket.rs
crates/rusheet-server/src/db/: mod.rs  models.rs
crates/rusheet-wasm/: Cargo.toml
crates/rusheet-wasm/src/: api.rs  lib.rs  viewport.rs
docs/: index.md
docs/.vitepress/: config.ts
docs/api/: core.md  events.md  index.md  types.md
docs/guide/: architecture.md  getting-started.md  index.md
e2e/: app.spec.ts  cell-editing.spec.ts
example/: README.md  api-usage.ts  package-lock.json  package.json
example/src/app/: page.tsx
example/src/components/: Spreadsheet.tsx  Toolbar.tsx
examples/: react-basic.tsx
migrations/: 001_initial.sql
specs/: advanced-features.md  architecture.md  clipboard.md  data-structures.md  flowchart.md  formatting-rules.md  formula-engine.md  fsm.md  keyboard-shortcuts.md  performance.md  persistence.md  rendering-engine.md  sheet-management.md  ui-interactions.md  user-experience.md  wasm-integration.md
src/: index.ts  main.ts
src/__tests__/: EdgeCases.integration.test.ts  setup.ts
src/canvas/: GridRenderer.ts  theme.ts
src/canvas/__tests__/: GridRenderer.integration.test.ts
src/collab/: CollaborationProvider.ts  CollaborationUI.ts  index.ts
src/core/: EventEmitter.ts  PersistenceManager.ts  RusheetAPI.ts  WasmBridge.ts  index.ts
src/core/__tests__/: RusheetAPI.test.ts  WasmBridge.integration.test.ts  colToLetter.test.ts  csv.test.ts  filtering.test.ts  merging.test.ts  sorting.test.ts  (+1 more)
src/react/: RuSheet.tsx  index.ts  useRuSheet.ts
src/styles/: main.css
src/types/: events.ts  index.ts  renderer.ts
src/ui/: AutocompleteEngine.ts  AutocompleteUI.ts  CellEditor.ts  FilterDropdown.ts  InputController.ts
src/worker/: RenderController.ts  index.ts  render.worker.ts  types.ts
tasks/: roadmap.md  task_1_1_main_entry.md  task_1_2_grid_renderer.md  task_1_3_input_controller.md  task_1_4_cell_editor.md
(+14 files in other folders)
