[package]
name = "rusheet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data structures for RuSheet spreadsheet"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bitvec = "1.0"
regex = "1.10"
