[package]
name = "rusheet-history"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Undo/redo history management for RuSheet"

[dependencies]
rusheet-core = { path = "../rusheet-core" }
rusheet-formula = { path = "../rusheet-formula" }
