[package]
name = "rusheet-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RuSheet collaboration and data server"

[dependencies]
# Workspace crates
rusheet-core = { path = "../rusheet-core" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CRDT
yrs = "0.21"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = { workspace = true }
anyhow = "1.0"
futures = "0.3"

[[bin]]
name = "rusheet-server"
path = "src/main.rs"
