[package]
name = "rusheet-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebAssembly bindings for RuSheet"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rusheet-core = { path = "../rusheet-core" }
rusheet-formula = { path = "../rusheet-formula" }
rusheet-history = { path = "../rusheet-history" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
uuid = { version = "1.6", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
